--- a/site/index.html
+++ b/site/index.html
@@ -100,62 +100,62 @@
 <body>
 <div id="main" style="width: 83.23%; height: 1000px">
 
-  <div class="row">
+<!--  <div class="row">-->
 
-    <div class="col-md-4">
-      <div class="card border-dark mb-3" style="max-width: 18rem;">
-       <div class="card-header">Введите название меню</div>
-        <div class="form-group">
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"  placeholder="">Введите название меню</textarea>
-        </div>
+<!--    <div class="col-md-4">-->
+<!--      <div class="card border-dark mb-3" style="max-width: 18rem;">-->
+<!--       <div class="card-header">Введите название меню</div>-->
+<!--        <div class="form-group">-->
+<!--          <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"  placeholder="">Введите название меню</textarea>-->
+<!--        </div>-->
 
-        <div class="up_bar_outside" align="left">
+<!--        <div class="up_bar_outside" align="left">-->
 
-          <div class="button_close_outside" >
-            <button type="button" class="close" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+<!--          <div class="button_close_outside" >-->
+<!--            <button type="button" class="close" aria-label="Close">-->
+<!--              <span aria-hidden="true">&times;</span>-->
+<!--            </button>-->
+<!--          </div>-->
 
-          <div class="number_button" align="left">
-            <button type="button" class="btn btn-outline-danger">1</button>
-          </div>
+<!--          <div class="number_button" align="left">-->
+<!--            <button type="button" class="btn btn-outline-danger">1</button>-->
+<!--          </div>-->
 
-        </div>
+<!--        </div>-->
 
-        <div class="card-body text-dark">
-          <div class="card border-dark mb-3" style="max-width: 16rem;">
+<!--        <div class="card-body text-dark">-->
+<!--          <div class="card border-dark mb-3" style="max-width: 16rem;">-->
 
-            <div class="button_close_outside" >
-              <button type="button" class="close" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
+<!--            <div class="button_close_outside" >-->
+<!--              <button type="button" class="close" aria-label="Close">-->
+<!--                <span aria-hidden="true">&times;</span>-->
+<!--              </button>-->
+<!--            </div>-->
 
-            <div class="header" align="center">
-             <input name="menu_name" type="text" placeholder="Введите название пункта" />
-              <input class="form-control" name="menu_name" id="menu_name" type="text" placeholder="Введите название пункта">
-            </div>
-
-
-            <div class="number_button" align="right">
-              <button type="button" class="btn btn-outline-primary">1</button>
-            </div>
+<!--            <div class="header" align="center">-->
+<!--             <input name="menu_name" type="text" placeholder="Введите название пункта" />-->
+<!--              <input class="form-control" name="menu_name" id="menu_name" type="text" placeholder="Введите название пункта">-->
+<!--            </div>-->
 
 
+<!--            <div class="number_button" align="right">-->
+<!--              <button type="button" class="btn btn-outline-primary">1</button>-->
+<!--            </div>-->
 
-          </div>
 
-        </div>
 
-        <div class="bnt" align="right">
-          <div class="add_button_outside" >
-            <button type="button" class="btn btn-success" aria-haspopup="true" aria-hidden="true">+</button>
-          </div>
-        </div>
+<!--          </div>-->
 
-      </div>
-    </div>
+<!--        </div>-->
+
+<!--        <div class="bnt" align="right">-->
+<!--          <div class="add_button_outside" >-->
+<!--            <button type="button" class="btn btn-success" aria-haspopup="true" aria-hidden="true">+</button>-->
+<!--          </div>-->
+<!--        </div>-->
+
+<!--      </div>-->
+<!--    </div>-->
 
     <div class="col-md-4">
       <div class="card border-dark mb-3" style="max-width: 18rem;">
@@ -174,6 +174,7 @@
 
         </div>
         <div class="card-body text-dark">
+
           <div class="card border-dark mb-3" style="max-width: 16rem;">
 
             <div class="button_close_outside" >
@@ -182,15 +183,19 @@
               </button>
             </div>
 
-
+            <span align = "center">Введите слово</span>
             <div class="header" align="center">
-             Введите слово <br>
+
+              <button type="button" class="close" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
               <input class="form-control" name="key_word" id="key_word" type="text" placeholder="Введите слово">
+              <div class="number_button" align="right">
+                <button type="button" class="btn btn-outline-primary">1</button>
+              </div>
             </div>
 
-            <div class="number_button" align="right">
-              <button type="button" class="btn btn-outline-primary">1</button>
-            </div>
+
 
             <div class="bnt" align="center">
               <div class="add_button_outside" >
@@ -213,54 +218,54 @@
     </div>
   </div>
 
-  <div class="col-md-4">
-    <div class="card border-dark mb-3" style="max-width: 18rem;">
-      <div class="card-header">Список статических слов</div>
-      <div class="up_bar_outside" align="left">
+<!--  <div class="col-md-4">-->
+<!--    <div class="card border-dark mb-3" style="max-width: 18rem;">-->
+<!--      <div class="card-header">Список статических слов</div>-->
+<!--      <div class="up_bar_outside" align="left">-->
 
-        <div class="button_close_outside" >
-          <button type="button" class="close" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
+<!--        <div class="button_close_outside" >-->
+<!--          <button type="button" class="close" aria-label="Close">-->
+<!--            <span aria-hidden="true">&times;</span>-->
+<!--          </button>-->
+<!--        </div>-->
 
-        <div class="number_button" align="left">
-          <button type="button" class="btn btn-outline-danger">1</button>
-        </div>
+<!--        <div class="number_button" align="left">-->
+<!--          <button type="button" class="btn btn-outline-danger">1</button>-->
+<!--        </div>-->
 
-      </div>
-      <div class="card-body text-dark">
-        <div class="card border-dark mb-3" style="max-width: 16rem;">
+<!--      </div>-->
+<!--      <div class="card-body text-dark">-->
+<!--        <div class="card border-dark mb-3" style="max-width: 16rem;">-->
 
-          <div class="button_close_outside" >
-            <button type="button" class="close" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
+<!--          <div class="button_close_outside" >-->
+<!--            <button type="button" class="close" aria-label="Close">-->
+<!--              <span aria-hidden="true">&times;</span>-->
+<!--            </button>-->
+<!--          </div>-->
 
-          <div class="header" align="center">
-           <input name="static_word" type="text" placeholder="Введите слово" />
-            <input class="form-control" name="static_word" id="static_word" type="text" placeholder="Введите слово">
-          </div>
+<!--          <div class="header" align="center">-->
+<!--           <input name="static_word" type="text" placeholder="Введите слово" />-->
+<!--            <input class="form-control" name="static_word" id="static_word" type="text" placeholder="Введите слово">-->
+<!--          </div>-->
 
-          <div class="number_button" align="right">
-            <button type="button" class="btn btn-outline-primary">1</button>
-          </div>
+<!--          <div class="number_button" align="right">-->
+<!--            <button type="button" class="btn btn-outline-primary">1</button>-->
+<!--          </div>-->
 
-        </div>
+<!--        </div>-->
 
-      </div>
+<!--      </div>-->
 
-      <div class="bnt" align="right">
-        <div class="add_button_outside" >
-          <button type="button" class="btn btn-success" aria-haspopup="true" aria-hidden="true">+</button>
-        </div>
-      </div>
+<!--      <div class="bnt" align="right">-->
+<!--        <div class="add_button_outside" >-->
+<!--          <button type="button" class="btn btn-success" aria-haspopup="true" aria-hidden="true">+</button>-->
+<!--        </div>-->
+<!--      </div>-->
 
-    </div>
+<!--    </div>-->
 
-  </div>
-</div>
+<!--  </div>-->
+<!--</div>-->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
